# stratus-cloud

./: .gitignore  README.md
apps/ambient/: .gitignore  Cargo.toml  README.md  build.sh
apps/ambient/api/protos/: greeter.proto
apps/ambient/src/: main.rs  server.rs  server_bad.rs
apps/ambient_prom/: Cargo.toml  Dockerfile  README.md  build_zero.sh
apps/poller/: README.md
apps/poller/src/: client.rs  server.rs
infra/: job.nomad
notes/: Nomad.md
pcb/kicad/: kicad_try.pro  kicad_try_aggressive.kicad_pcb  kicad_try_wing.kicad_pcb
pcb/older_than_git/: kicad_try_rev7.kicad_pcb  kicad_try_rev9.kicad_pcb
