[package]
name = "ambient_prom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ambient_prom"

[dependencies]
prometheus_exporter = "0.8.3"
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.6",features = ["blocking"] }
rand = "0.8.4"
